[gd_scene load_steps=7 format=3 uid="uid://dmmbbb3tk80xm"]

[ext_resource type="Script" uid="uid://dlu2xtltb1261" path="res://scenes/game_ui/game_ui.gd" id="1_hk0ve"]
[ext_resource type="LabelSettings" uid="uid://doxulbd0pae3v" path="res://resources/labels/48_gray.tres" id="1_sq0em"]
[ext_resource type="LabelSettings" uid="uid://cv1yhrt6kejsl" path="res://resources/labels/96_orange.tres" id="2_1i64n"]
[ext_resource type="FontFile" uid="uid://dq26ntvgkb441" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_najyh"]
[ext_resource type="AudioStream" uid="uid://muvskh7g4f54" path="res://assets/audio/jazzyfrenchy.mp3" id="4_2cwxn"]

[sub_resource type="LabelSettings" id="LabelSettings_2cwxn"]
font = ExtResource("3_najyh")
font_size = 48
font_color = Color(0.614348, 0.410292, 0.118247, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.290196)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hk0ve")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="UIContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/UIContainer"]
layout_mode = 2
text = "LEVEL 10"
label_settings = ExtResource("1_sq0em")

[node name="AttemptsLabel" type="Label" parent="MarginContainer/UIContainer"]
layout_mode = 2
text = "Attempets 100"
label_settings = ExtResource("1_sq0em")

[node name="GameOverContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelCompleteLabel" type="Label" parent="MarginContainer/GameOverContainer"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_1i64n")

[node name="PressSpaceLabel" type="Label" parent="MarginContainer/GameOverContainer"]
layout_mode = 2
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_2cwxn")
horizontal_alignment = 1

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(24, 24)
stream = ExtResource("4_2cwxn")
